forms in bootstrap

--- a/formsbootstrap.html
+++ b/formsbootstrap.html
@@ -9,14 +9,12 @@
     <title>Forms in Bootstrap</title>
 </head>
 
-<body>
+<body class="bg-info">
 
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="col-md-6 col-lg-4">
             <div class="card shadow p-4">
                 <h3 class="text-center mb-4">Login</h3>
-
-                <!-- Your form here -->
                 <form>
                     <div>
                         <div class="form-group">
