--- a/formsbootstrap.html
+++ b/formsbootstrap.html
@@ -14,7 +14,7 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="col-md-6 col-lg-4">
             <div class="card shadow p-4">
-                <h3 class="text-center mb-4">Login</h3>
+                <h3 class="text-center mb-4 card-title">Login</h3>
                 <form>
                     <div>
                         <div class="form-group">
