--- a/card.html
+++ b/card.html
@@ -10,6 +10,48 @@
 </head>
 
 <body class="bg-info">
+    <h1 class="display-1 text-center">Pricing Panel</h1>
+    <div class="container">
+        <div class="row justify-content-between">
+            <div class="card  text-center card shadow p-4">
+                <h1 class="card-title">Basic Plan</h1>
+                <div class="card-body">
+                    <p class="card-text">Features</p>
+                    <ul class="list-unstyled">
+                        <li>10 Projects</li>
+                        <li>Email Support</li>
+                        <li>5GB Storage</li>
+                    </ul>
+                    <button class="btn-primary">Buy Now</button>
+                </div>
+            </div>
+            <div class="card  text-center card shadow p-4">
+                <h1 class="card-title">Standard Plan</h1>
+                <div class="card-body">
+                    <p class="card-text">Features</p>
+                    <ul class="list-unstyled">
+                        <li>20 Projects</li>
+                        <li>Priority Support</li>
+                        <li>50GB Storage</li>
+                    </ul>
+                    <button class="btn-primary">Buy Now</button>
+                </div>
+            </div>
+            <div class="card  text-center card shadow p-4">
+                <h1 class="card-title">Premimum Plan</h1>
+                <div class="card-body">
+                    <p class="card-text">Features</p>
+                    <ul class="list-unstyled">
+                        <li>Unlimited Projects</li>
+                        <li>24/7 Support</li>
+                        <li>Unlimited Storage</li>
+                    </ul>
+                    <button class="btn-primary">Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
