--- a/card.html
+++ b/card.html
@@ -9,8 +9,8 @@
     <title>Forms in Bootstrap</title>
 </head>
 
-<body class="bg-info">
-    <h1 class="display-1 text-center">Pricing Panel</h1>
+<body class="bg-primary">
+    <h1 class="display-1 text-center text-white">Pricing Panel</h1>
     <div class="container">
         <div class="row justify-content-between">
             <div class="card  text-center card shadow p-4">
