--- a/card.html
+++ b/card.html
@@ -12,58 +12,64 @@
 <body class="bg-primary">
     <h1 class="display-1 text-center text-white">Pricing Panel</h1>
     <div class="container">
-        <div class="row justify-content-between">
-            <div class="card  text-center card shadow p-4">
-                <h1 class="card-title">Basic Plan</h1>
-                <div class="card-body">
-                    <p class="card-text">Features</p>
-                    <ul class="list-unstyled">
-                        <li>10 Projects</li>
-                        <li>Email Support</li>
-                        <li>5GB Storage</li>
-                    </ul>
-                    <button class="btn-primary">Buy Now</button>
+        <div class="row text-center">
+            <div class="col-md-4 mb-4">
+                <div class="card  text-center card shadow p-4 h-100">
+                    <h1 class="card-title">Basic Plan</h1>
+                    <div class="card-body">
+                        <p class="card-text">Features</p>
+                        <ul class="list-unstyled">
+                            <li>10 Projects</li>
+                            <li>Email Support</li>
+                            <li>5GB Storage</li>
+                        </ul>
+                        <button class=" btn btn-primary">Buy Now</button>
+                    </div>
                 </div>
             </div>
-            <div class="card  text-center card shadow p-4">
-                <h1 class="card-title">Standard Plan</h1>
-                <div class="card-body">
-                    <p class="card-text">Features</p>
-                    <ul class="list-unstyled">
-                        <li>20 Projects</li>
-                        <li>Priority Support</li>
-                        <li>50GB Storage</li>
-                    </ul>
-                    <button class="btn-primary">Buy Now</button>
+            <div class="col-md-4 mb-4">
+                <div class="card  text-center card shadow p-4 h-100">
+                    <h1 class="card-title">Standard Plan</h1>
+                    <div class="card-body">
+                        <p class="card-text">Features</p>
+                        <ul class="list-unstyled">
+                            <li>20 Projects</li>
+                            <li>Priority Support</li>
+                            <li>50GB Storage</li>
+                        </ul>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
                 </div>
             </div>
-            <div class="card  text-center card shadow p-4">
-                <h1 class="card-title">Premimum Plan</h1>
-                <div class="card-body">
-                    <p class="card-text">Features</p>
-                    <ul class="list-unstyled">
-                        <li>Unlimited Projects</li>
-                        <li>24/7 Support</li>
-                        <li>Unlimited Storage</li>
-                    </ul>
-                    <button class="btn-primary">Buy Now</button>
+            <div class="col-md-4 mb-4">
+                <div class="card  text-center card shadow p-4 h-100">
+                    <h1 class="card-title">Premimum Plan</h1>
+                    <div class="card-body">
+                        <p class="card-text">Features</p>
+                        <ul class="list-unstyled">
+                            <li>Unlimited Projects</li>
+                            <li>24/7 Support</li>
+                            <li>Unlimited Storage</li>
+                        </ul>
+                        <button class="btn btn-primary">Buy Now</button>
+                    </div>
                 </div>
             </div>
+            </di>
         </div>
-    </div>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
