--- a/card.html
+++ b/card.html
@@ -14,10 +14,10 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4 mb-4">
-                <div class="card  text-center card shadow p-4 h-100">
+                <div class="card  text-center card shadow p-4 h-100 bg-light">
                     <h1 class="card-title">Basic Plan</h1>
                     <div class="card-body">
-                        <p class="card-text">Features</p>
+                        <p class="card-text font-weight-bold">Features</p>
                         <ul class="list-unstyled">
                             <li>10 Projects</li>
                             <li>Email Support</li>
@@ -28,10 +28,10 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card  text-center card shadow p-4 h-100">
+                <div class="card  text-center card shadow p-4 h-100 bg-light">
                     <h1 class="card-title">Standard Plan</h1>
                     <div class="card-body">
-                        <p class="card-text">Features</p>
+                        <p class="card-text font-weight-bold">Features</p>
                         <ul class="list-unstyled">
                             <li>20 Projects</li>
                             <li>Priority Support</li>
@@ -42,10 +42,10 @@
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card  text-center card shadow p-4 h-100">
+                <div class="card  text-center card shadow p-4 h-100 bg-light">
                     <h1 class="card-title">Premimum Plan</h1>
                     <div class="card-body">
-                        <p class="card-text">Features</p>
+                        <p class="card-text font-weight-bolder">Features</p>
                         <ul class="list-unstyled">
                             <li>Unlimited Projects</li>
                             <li>24/7 Support</li>
