--- a/forms.html
+++ b/forms.html
@@ -13,7 +13,7 @@
     <div class="container mt-5">
         <div class="container mt-5">
             <div class="card p-4 shadow">
-                <h1 class="display-4 mb-4">Forms</h1>
+                <h1 class="display-4 mb-4 text-center">Forms</h1>
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
