navbars in bootstrap

--- a/navbar.html
+++ b/navbar.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-sm ">
         <a class="navbar-brand " href="#">Navbar</a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#home">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="home">
             <div class="navbar-nav">
                 <a href="#" class="nav-item nav-link">Home</a>
                 <a href="#" class="nav-item nav-link">Contact</a>
