--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,10 @@
                 <a href="#" class="nav-item nav-link">About</a>
             </div>
         </div>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-primary my-2 my-sm-0 " type="submit">Search</button>
+        </form>
     </nav>
 
 
