--- a/navbar.html
+++ b/navbar.html
@@ -21,11 +21,12 @@
                 <a href="#" class="nav-item nav-link">Contact</a>
                 <a href="#" class="nav-item nav-link">About</a>
             </div>
+            <form class="form-inline ml-auto">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-primary my-2 my-sm-0 " type="submit">Search</button>
+            </form>
         </div>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-primary my-2 my-sm-0 " type="submit">Search</button>
-        </form>
+
     </nav>
 
 
