navbars in bootstrap

--- a/navbar.html
+++ b/navbar.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-sm ">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-sm sticky-top">
         <a class="navbar-brand " href="#">Navbar</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#home">
             <span class="navbar-toggler-icon"></span>
@@ -28,6 +28,90 @@
         </div>
 
     </nav>
+    <div class="container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dolores aut accusantium quidem suscipit error
+        fuga blanditiis at assumenda, esse tempora ab eveniet, architecto neque odit ipsam beatae sequi est.
+        A, soluta nobis id hic nemo maiores ab quis, laborum ipsa veritatis itaque facilis eos delectus dolorum
+        officiis iusto autem. Magni quos alias quisquam dolore mollitia iure dicta placeat repudiandae.
+        Nostrum error earum voluptatibus dicta beatae illo, rerum necessitatibus delectus suscipit, neque sunt,
+        adipisci eligendi. Labore provident saepe dolor reiciendis laborum ab harum, id libero delectus quia
+        suscipit, mollitia magnam?
+        Atque at officia eius fugit, impedit sapiente sed possimus magni inventore numquam recusandae, earum
+        provident velit ducimus tenetur laudantium pariatur incidunt quidem minima cumque iusto maxime facere?
+        Aliquid, laboriosam eaque!
+        Tenetur est provident fugiat atque ullam voluptate in, laudantium, corrupti, eum veritatis adipisci. Sint
+        odit provident vitae impedit velit modi iste ipsa exercitationem, corporis dignissimos consequatur amet
+        temporibus, eius natus!
+        Iure consectetur dolore rerum, quo dolorem nam debitis mollitia. Quasi, ab qui ipsam beatae nam atque!
+        Culpa, aliquam similique dolores, nam eaque corrupti cum esse temporibus harum iste voluptatibus accusamus.
+        Ullam dolorem ex in, odit fugiat aliquam! Nam a accusantium qui repellat? Soluta id atque repellendus dolor
+        laborum voluptas nam, illum perspiciatis libero rerum est ipsum labore quo. Sapiente, fugiat.
+        Animi quos obcaecati assumenda vitae itaque, veniam nemo eligendi quis in aspernatur laborum porro aperiam,
+        quidem minus magnam a sunt nihil laudantium nulla illo? Reprehenderit iste placeat quam aliquid eveniet?
+        Distinctio odit nulla exercitationem cupiditate sit id dolorum necessitatibus ex ducimus. Ipsum quas odit
+        fugit. Autem dolorem voluptatem sequi facilis provident vitae, sapiente sed! Corrupti quibusdam ipsa illum
+        in ullam?
+        Blanditiis suscipit totam pariatur modi sapiente repellendus quae quas recusandae minima maxime eius
+        exercitationem aliquid possimus hic a numquam asperiores, esse maiores reprehenderit rerum, corporis aperiam
+        rem! Unde, odit recusandae!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi itaque at aliquid eligendi expedita nobis ut
+        molestias dignissimos rem, commodi, facilis reiciendis minus iure consequatur hic omnis quae perferendis
+        debitis?
+        Veniam incidunt maxime, ut impedit excepturi, obcaecati vitae est nihil eaque, inventore eveniet placeat
+        voluptatem reprehenderit accusantium laboriosam eum! Modi, id error soluta commodi explicabo nam tempora
+        aliquam quibusdam dignissimos?
+        Porro vero mollitia illo eius nesciunt id doloribus voluptatem dolores aspernatur ab consequatur eligendi
+        cum earum iusto neque ipsum corporis odio, dolore architecto recusandae pariatur iure natus ea sint. Est.
+        Doloremque dolorum vel commodi nulla saepe tempora, provident quia beatae, obcaecati iste corporis deserunt
+        inventore consectetur suscipit sequi aut totam illum in atque alias veniam pariatur ab iusto. Sint, a.
+        A error nemo laborum sunt odio veniam est iste quas deleniti tenetur id tempora animi pariatur aliquid
+        voluptate sequi expedita ipsam, dignissimos rerum. Nisi non consequatur cum saepe aut tempora?
+        Eum modi maiores excepturi molestias reiciendis in alias, explicabo expedita atque corrupti eligendi
+        nesciunt. Enim qui, ducimus eius voluptate nostrum commodi odio et labore eum eveniet aspernatur recusandae
+        unde voluptatibus!
+        Dicta iusto dolores deleniti ipsum vitae totam excepturi autem nihil laborum aut soluta, libero eum iure
+        accusamus aspernatur eligendi? Repellat, facere quisquam quo accusamus soluta maxime itaque impedit nobis.
+        Aut!
+        Soluta vel placeat ipsa eos! Eligendi tempora necessitatibus sint ipsum excepturi reiciendis harum iste
+        laborum ea quam vitae, reprehenderit id, similique nostrum est ut. Provident consectetur consequuntur vero
+        aut commodi.
+        Est, natus ipsa voluptatem sed a, maiores temporibus at sit odio veniam ipsam, eum dignissimos beatae
+        voluptates rem. Harum asperiores libero reiciendis quisquam! Fuga, similique? Asperiores repellat deserunt
+        nostrum laborum.
+        Quasi, voluptate! Voluptatum exercitationem magnam eius, accusantium pariatur, voluptates, ipsam inventore
+        id libero ipsa nostrum nemo maxime laudantium vero quia atque sunt provident ut. Iure libero excepturi magni
+        mollitia ea.
+        Sunt quo sint obcaecati numquam, alias velit repellendus cupiditate dolore asperiores similique ea, repellat
+        nisi tenetur, molestias rerum ex! Tempore ad illo odio vero saepe beatae eligendi quisquam delectus
+        architecto.
+        Minima quidem unde, aut sequi aspernatur harum laboriosam voluptates ipsam earum debitis provident animi
+        possimus quas ullam accusantium. A minus sapiente aut assumenda fuga exercitationem, accusamus praesentium
+        explicabo sint. Harum.
+        Repellat quos ipsam blanditiis! Quidem quaerat distinctio temporibus odit consequatur sint voluptate
+        quisquam ipsum. Dicta, voluptas! Quasi doloribus laborum aliquam est, incidunt consequatur rem quidem harum
+        repellat, assumenda, suscipit dicta.
+        Voluptates iste, non dolorem nostrum, repellendus reprehenderit enim ab laboriosam amet ex adipisci deleniti
+        dolorum culpa alias eveniet impedit quam magni odio porro tempora consequatur vel! Dolore quod delectus rem.
+        Esse, explicabo? Assumenda exercitationem maxime saepe tempora voluptatem veritatis repudiandae illum
+        nesciunt architecto soluta odio mollitia reprehenderit cum voluptate ea quod fugiat, voluptatum earum,
+        voluptatibus officiis. Quasi sequi culpa reprehenderit!
+        Alias error voluptas, corrupti reprehenderit quos, accusamus tenetur distinctio accusantium assumenda,
+        possimus illo. Esse dolor consequuntur quos dolores minima nisi beatae consectetur at, ipsa culpa, optio
+        laborum odio quaerat animi.
+        Excepturi error dolorem, eaque aliquam praesentium provident amet asperiores sunt. Voluptates, sequi
+        veritatis aut delectus alias deserunt. Dicta reprehenderit corporis praesentium vero suscipit. Repellat,
+        voluptates explicabo quo debitis necessitatibus porro.
+        Molestiae assumenda ducimus maxime incidunt sunt impedit sint fugit numquam, quaerat veniam aliquid odit
+        odio animi tempora veritatis. Iure eligendi mollitia blanditiis harum vitae ullam culpa molestiae
+        repudiandae similique quae.
+        Impedit commodi delectus ipsum similique corrupti dolorum nostrum, voluptate deserunt modi molestiae
+        assumenda vero consequatur veniam amet aliquid beatae. Aliquid quidem accusantium ratione voluptas dolorum
+        aut maiores delectus cumque? Nobis?
+        Accusamus, molestias assumenda? Voluptatem quos ab esse laborum consectetur qui. Magnam esse excepturi ex
+        ipsam repellendus, suscipit saepe animi nulla at neque officia culpa quidem molestiae facere, soluta
+        reprehenderit debitis.
+
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
