navbars in bootstrap

--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-sm sticky-top">
         <a class="navbar-brand " href="#">Navbar</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#home">
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#home">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="home">
